# training-stm32f3

./: CMakeLists.txt  README.md
openocd/: stm32f303.cfg  stm32f303.svd
project/: CMakeLists.txt  conf.h  isr.c  main.c  os.c  os.h  port.c  startup.c  stm32f303xc.ld
project/device/: stm32f3.h
project/ll/: bus.h  flash.h  io.h  rcc.c  rcc.h  systick.h  usart.c  usart.h  utils.h
